--- a/signup.html
+++ b/signup.html
@@ -114,7 +114,7 @@
         </label>
       </div> -->
       <button class="w-100 btn btn-lg btn-primary" type="submit">Sign me up!</button>
-      <p class="mt-5 mb-3 text-muted">&copy; Aarav Chaudhary</p>
+      <p class="mt-5 mb-3 text-muted">&copy; Saurabh Panwar</p>
     </form>
   </main>
 
